--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1"
+  },
+  "dependencies": {
+    "angular": "^1.3.16",
+    "angular-formly": "^6.11.5",
+    "angular-formly-templates-bootstrap": "^4.3.1",
+    "api-check": "^7.2.4",
+    "bootstrap": "^3.3.4",
+    "ui-router": "0.0.1"
   }
 }
