--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-browserify": "^0.5.1"
+    "gulp-browserify": "^0.5.1",
+    "gulp-sass": "^2.0.1",
+    "lodash": "^3.9.3"
   },
   "dependencies": {
     "angular": "^1.3.16",
